Performance refactor, URLs are now rendered once, not once every other second or so

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="main" #adminCard>
-    <div class="btn btn-secondary mb-3" routerLink="{{routingService.getRoutePath('campaign-overview')}}">
+    <div class="btn btn-secondary mb-3" routerLink="{{campaignOverviewUrl}}">
         <span class="fas fa-globe-americas"></span>
         Back To campaign overview
     </div>
@@ -176,7 +176,7 @@
 
         </div>
 
-        <div class="btn btn-secondary mb-3" routerLink="{{routingService.getRoutePath('campaign-overview')}}">
+        <div class="btn btn-secondary mb-3" routerLink="{{campaignOverviewUrl}}">
             <span class="fas fa-globe-americas"></span>
             Back To campaign overview
         </div>
