--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -7,13 +7,13 @@ id="container-overview"
 >
     <div class="row mx-0" id="campaign-overview-heading">
         <h3 class="flex-1 text-center">Choose your campaign</h3>
-        <div id="heading-buttons" *ngIf="isGlobalAdmin()">
-            <a routerLink="{{routingService.getRoutePath('admin')}}" class="float-right alert alert-info mb-0 p-2 mx-2">
+        <div id="heading-buttons" *ngIf="isGlobalAdmin">
+            <a routerLink="{{ generalAdminUrl }}" class="float-right alert alert-info mb-0 p-2 mx-2">
                 <span class="fas fa-user-cog"></span>
                 General administration
             </a>
     
-            <a routerLink="{{ routingService.getRoutePath('config-tables') }}" class="float-right alert alert-info mb-0 p-2 mx-2">
+            <a routerLink="{{ configTableUrl }}" class="float-right alert alert-info mb-0 p-2 mx-2">
                 <i class="fa fa-table"></i>
                 <span> Config Tables </span>
             </a>
