--- a/src/app/components/articles/location-article-update/location-article-update.component.html
+++ b/src/app/components/articles/location-article-update/location-article-update.component.html
@@ -12,7 +12,7 @@
         <ng-template #createState>
             <app-edit-toggle 
             [isInUpdateState]=true 
-            [link]="routingService.getRoutePath('location-overview', {campaign: campaign})"
+            [link]="locationOverviewUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center">
