--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -15,16 +15,10 @@
                 {{ articleData.name }} 
                 <!-- Marker Icons -->
                 <i
-                *ngFor="let marker of articleData.marker_details" 
+                *ngFor="let marker of articleData.marker_details; let markerIndex = index" 
                 title="Marker on Map of {{marker.map}}"
                 class="mx-1 no-underline pointer icon fas fa-{{marker.map_icon}}" 
-                routerLink="{{routingService.getRoutePath('marker', {
-                        parent_location_name: articleData.parent_location_details.name, 
-                        location_name: articleData.name, 
-                        map_name: marker.map,
-                        campaign: campaign.name
-                    })
-                }}"
+                routerLink="{{ markerUrls[markerIndex] }}"
                 ></i>
 
                 <!-- Add-Marker-Icon -->
@@ -32,19 +26,14 @@
                 class="fa fa-plus icon ml-3"
                 title="Add Marker"
                 [ngClass]="{'d-none': !hasCreatePermission}"
-                routerLink="{{routingService.getRoutePath('marker-create', {
-                        parent_location_name: articleData.parent_location_details.name,
-                        location_name: articleData.name,
-                        campaign: campaign.name
-                    })
-                }}"
+                routerLink="{{ markerCreateUrl }}"
                 ></i>
             </h1>
 
             <!-- String indicating all parent_locations -->
             <p *ngIf="articleData.parent_location_list.length > 0" class="text-center font-italic col-12 mb-5">
                 <span *ngFor="let loc of articleData.parent_location_list; let i = index"> 
-                    <a routerLink="{{buildLocationRoute(i)}}">
+                    <a routerLink="{{parentLocationUrls[i]}}">
                         {{loc}}
                     </a>
                     <i class="fa fa-arrow-right mx-1"></i>
@@ -77,7 +66,7 @@
             [heading]="'Characters of Interest'" 
             [items]="articleData.characters" 
             [articleType]="'character'" 
-            [createLink]="routingService.getRoutePath('character-create', {campaign: campaign.name})"
+            [createLink]="characterCreateUrl"
             ></app-object-list>
         </div>
 
@@ -91,7 +80,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteArticle()"
-        [link]="routingService.getRoutePath('location-overview', {campaign: campaign.name})"
+        [link]="locationOverviewUrl"
         [label]="'Back to Locations'"
         [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
