Performance refactor, Quest URLs and static variables are now built once, not once every repainting

--- a/src/app/components/articles/quest-article-update/quest-article-update.component.html
+++ b/src/app/components/articles/quest-article-update/quest-article-update.component.html
@@ -15,7 +15,7 @@
         <ng-template #createState>
             <app-edit-toggle 
             [isInUpdateState]=true 
-            [link]="routingService.getRoutePath('quest-overview', {campaign: campaign})"
+            [link]="questOverviewUrl"
             ></app-edit-toggle>
 
             <h2 class="text-center">
