Performance refactor, Rule URLs and static variables are now built once, not once every repainting

--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -26,7 +26,7 @@
 
         <!-- Button to Frontpage -->
         <div class="row mt-5">
-            <a class="btn btn-secondary col-md-3" routerLink="{{ routingService.getRoutePath('home2', {campaign: campaign.name}) }}">
+            <a class="btn btn-secondary col-md-3" routerLink="{{ homeUrl }}">
                 Back To Frontpage
             </a>
         </div>
