Performance refactor Profile URLs and static variables are now built once, not once every repainting

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -51,7 +51,7 @@
         <div class="mt-5">
             <app-article-footer
             (delete)="deleteThisUser()"
-            [link]="routingService.getRoutePath('home2', {campaign: campaign.name})"
+            [link]="homeUrl"
             [label]="'Home'"
             [deleteMessage]="'Delete your account?'"
             ></app-article-footer>
