Fixed some buggs and undesired behaviour

--- a/src/app/components/utility/object-list/object-list.component.html
+++ b/src/app/components/utility/object-list/object-list.component.html
@@ -8,7 +8,7 @@
     <!-- List -->
     <ul>
         <li *ngFor="let item of items">
-            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/{{articleType}}/{{item.name}}">
+            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/{{articleType}}/{{campaign}}/{{item.name}}">
                 {{item.name}}
             </a>
         </li>
