Reduced size of overview images

--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -7,7 +7,7 @@
 
         <!-- Image -->
         <div class="row" *ngIf="overviewTypeName!==characterOverview">
-            <img class="col px-0 mb-4" src="{{overviewTypeMetaData[overviewTypeName].image}}" alt="Image indicating the overview type"/>
+            <img class="col overview-image px-0 mb-4" src="{{overviewTypeMetaData[overviewTypeName].image}}" alt="Image indicating the overview type"/>
         </div>
 
         <!-- Character OverView Snippet | PC List-->
