--- a/src/app/components/articles/article-overview/article-overview.component.scss
+++ b/src/app/components/articles/article-overview/article-overview.component.scss
@@ -2,6 +2,11 @@ ul{
 	list-style-type: disclosure-closed;
 }
 
+.overview-image{
+    max-height: 20rem;
+    object-fit: cover;
+}
+
 .filter-bar{
     background-color: transparent;
     border: 1px white solid;
