--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -28,8 +28,8 @@
         </div>
 
         <!-- Leaflet Map -->
-        <div class="row" *ngIf="articleData; else noMapMessage">
-            <div class="mb-5 col" *ngIf="!isLoadingArticleData; else loading">
+        <div class="row" *ngIf="maps.length > 0; else noMapMessage">
+            <div class="mb-5 col" *ngIf="articleData; else loading">
                 <app-leaflet-map 
                 [map]="articleData"
                 [campaign]="campaign"
@@ -49,7 +49,7 @@
         ></app-article-footer>
         
     </article>
-    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
+    <ng-template #loading class="mb-4"> <app-spinner class="m-auto"></app-spinner> </ng-template> 
 </div>
 
 <ng-template #noMapMessage>
