Fixed broken links on location article update and removed unused imports

--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -3,7 +3,7 @@
         <div class="row" *ngIf="hasUpdatePermission">
             <div class="col-12">
                 <app-edit-toggle 
-                [isInUpdateState]=false 
+                [isInUpdateState]="false" 
                 [link]="'update'"
                 ></app-edit-toggle>
             </div>
