--- a/src/app/components/articles/location-article-update/location-article-update.component.html
+++ b/src/app/components/articles/location-article-update/location-article-update.component.html
@@ -2,7 +2,7 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]="true" [link]="'..'"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Location {{ userModel.name }}
@@ -11,7 +11,7 @@
         
         <ng-template #createState>
             <app-edit-toggle 
-            [isInUpdateState]=true 
+            [isInUpdateState]="true" 
             [link]="locationOverviewUrl"
             ></app-edit-toggle>
 
