--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -5,7 +5,7 @@
             <div class="col-12">
                 <app-edit-toggle 
                 [isInUpdateState]=false 
-                [link]="'update'"
+                [link]="updateMapUrl"
                 ></app-edit-toggle>
             </div>
         </div>
