Made it so link to recording is only shown if there is a recording

--- a/src/app/components/utility/session/session.component.html
+++ b/src/app/components/utility/session/session.component.html
@@ -49,13 +49,13 @@
                         </a>
                     </div>
                 </div>
-
-                <a [routerLink]="sessionAudioUrl">
-                    <h5>
+                <h5 *ngIf="cardData.has_recording">
+                    <a [routerLink]="sessionAudioUrl">
                         <span class="fa fa-file-audio-o"></span> 
-                        SessionRecording 
-                    </h5>
-                </a>
+                        Recording 
+                    </a>
+                </h5>
+
             </div>
 
             <app-formly-formcontainer 
